[gd_scene load_steps=25 format=3 uid="uid://x84vm6f4d0q3"]

[ext_resource type="Script" uid="uid://b0lqbwlgaiyek" path="res://Scripts/player.gd" id="1_o0f8b"]
[ext_resource type="Texture2D" uid="uid://b3tehdseqig52" path="res://Sprites/Placeholder Sprites/PixelKeisha-Sheet.png" id="2_3smsa"]
[ext_resource type="Script" uid="uid://c65cuw1x2fei6" path="res://Scripts/General/hitbox_component.gd" id="2_fcmex"]
[ext_resource type="Texture2D" uid="uid://cbtyb0iggpvhc" path="res://Sprites/Placeholder Sprites/PixelKeisha - Run-Sheet.png" id="3_8erm5"]
[ext_resource type="Script" uid="uid://d0d7iiw73mo4c" path="res://Scripts/state_machine.gd" id="4_ajo0r"]
[ext_resource type="Script" uid="uid://o06t7d74cyr4" path="res://Scripts/idle.gd" id="4_ons1q"]
[ext_resource type="Script" uid="uid://3t1qmjx36l7w" path="res://Scripts/running.gd" id="5_ajo0r"]
[ext_resource type="Script" uid="uid://dkybn4ae3tv60" path="res://Scenes/Characters/stamina_component.gd" id="6_fcmex"]
[ext_resource type="Script" uid="uid://qqfq3rgxpffk" path="res://Scripts/dash.gd" id="6_flf3p"]
[ext_resource type="Script" uid="uid://bjp7mkgm081wa" path="res://Scripts/General/health_component.gd" id="8_xo8ps"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_8erm5")
region = Rect2(76, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_3smsa")
region = Rect2(0, 0, 36, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_3smsa")
region = Rect2(36, 0, 36, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_3smsa")
region = Rect2(0, 38, 36, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_3smsa")
region = Rect2(36, 38, 36, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("3_8erm5")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_8erm5")
region = Rect2(38, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_8erm5")
region = Rect2(76, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_8erm5")
region = Rect2(0, 38, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_8erm5")
region = Rect2(38, 38, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_8erm5")
region = Rect2(76, 38, 38, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_fcng2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3smsa"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q5hbr"]
radius = 7.0
height = 24.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_o0f8b")

[node name="Player" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fcng2")
animation = &"idle"
autoplay = "idle"

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_mask = 3
script = ExtResource("2_fcmex")
health_component = NodePath("../HealthComponent")

[node name="Collision" type="CollisionShape2D" parent="HitboxComponent"]
unique_name_in_owner = true
visible = false
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_3smsa")
debug_color = Color(0.99956, 0, 0.109055, 0.42)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("8_xo8ps")

[node name="StaminaComponent" type="Node2D" parent="."]
script = ExtResource("6_fcmex")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_ajo0r")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_ons1q")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("5_ajo0r")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("6_flf3p")

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StaminaCooldown" type="Timer" parent="."]
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="iFrames" type="Timer" parent="."]
wait_time = 0.35

[node name="Stamina" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = -13.0
offset_right = -21.0
offset_bottom = 13.0
fill_mode = 3
show_percentage = false

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_q5hbr")

[connection signal="body_entered" from="HitboxComponent" to="HitboxComponent" method="_on_body_entered"]
[connection signal="timeout" from="DashCooldown" to="StateMachine/Dash" method="_dash_cooldown_timeout"]
[connection signal="timeout" from="StaminaCooldown" to="StaminaComponent" method="_on_stamina_cooldown_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="iFrames" to="StateMachine/Dash" method="_on_i_frames_timeout"]
